--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -192,5 +192,75 @@
         font-size: 6rem;
         font-weight: 100;
 
+
+    }
+}
+
+    @include respond(tab-port) {
+        .card {
+            height: auto;
+            border-radius: $border-radius;
+            background-color: $color-bg-white;
+            box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
+        
+        
+            &__side {        
+              height: auto;
+              position: relative;
+
+              &--front {
+                  background-color: $color-bg-white;
+                  padding-bottom: 2rem;
+
+        
+              }
+        
+              &--back {
+                  transform: rotateY(0);
+                  text-align: center;
+                  clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
+                  margin-top: -3.5rem;
+        
+              }
+        
+            } 
+        
+            &:hover &__side--front{
+                transform: rotateY(0);
+        
+        
+            }
+            //FRONT SIDE STYLING
+           
+            &__cta {
+                position: relative;
+                top: 0;
+                left: 0;
+                transform: translate(0);
+                width: 100%;
+                padding: 3rem 0;
+                
+            }
+        
+            &__price-box {
+                margin-bottom: 0rem;        
+            }
+        
+            &__price-only {
+                font-size: 1.4rem;
+                text-transform: uppercase;
+                margin-bottom: -4rem;
+
+        
+            }
+        
+            &__price-value {
+                font-size: 4rem;
+                font-weight: 100;
+                margin-bottom: 1rem;
+        
+            }
+        
+        
     }
 }
