--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -25,7 +25,7 @@
        -webkit-background-clip: text;
 
        @include respond(tab-port) {  //width ? < 900
-        margin-bottom: 0;    
+        margin-bottom: -2rem;    
     }
 
     }
