--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -18,6 +18,7 @@
       top: 0;
       left: 0;
       width: 100%;
+      -webkit-backface-visibility: hidden;
       backface-visibility: hidden;
       border-radius: $border-radius;
       box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
@@ -69,6 +70,7 @@
     &__picture {
         background-size: cover;
         height: 23rem;
+        -webkit-background-blend-mode: screen;
         background-blend-mode: screen;  //work on just few browsers, hover to see
         overflow: hidden; //bcz image is overflowing the edges of parent
         -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
@@ -196,7 +198,9 @@
     }
 }
 
-    @include respond(tab-port) {
+    @media only screen and (max-width: 56.25em),
+    only screen and (hover: none)
+      {
         .card {
             height: auto;
             border-radius: $border-radius;
