--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -38,7 +38,7 @@
             @include respond(tab-port) {  //width ? < 900
                 top: -1rem;
                 transform: scale(1.3);
-                z-index: 100;
+                z-index: 1000;
             }
         }
 
@@ -57,7 +57,15 @@
             outline: 1.5rem solid $color-primary;
             transform: scale(1.05) translateY(-.5rem);
             box-shadow: 0 2.5rem 4rem rgba($color-black, .5);
-            z-index: 20;
+            z-index: 2000000;
+
+            @include respond(tab-port) {  //width ? < 900
+              outline: 1.2rem solid $color-primary;
+              transform: scale(1.3) translateY(-.5rem);
+              box-shadow: 0 2.5rem 4rem rgba($color-black, .5);
+              z-index: 2000000;
+            }
+
 
         }//s
 
